<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ActivityHome">

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fontFamily="cursive"
        android:background="@drawable/smart"
        android:textSize="50dp"
        android:textStyle="bold" />






    <LinearLayout
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:orientation="horizontal"
            android:text="@string/app_name1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:hint="."
            android:inputType="number"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:orientation="horizontal"
            android:text="°C"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>




    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_edittext"
            android:text="@string/app_name3"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/input1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:hint="%"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="%"
            android:background="@drawable/background_edittext"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/soil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_edittext"
            android:text="@string/app_name5"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:orientation="horizontal"
            android:text="@string/app_name4"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_edittext"
            android:text="@string/app_name6"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/background_edittext"
            android:text="@string/app_name7"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/signout_btn"
        android:layout_width="311dp"
        android:layout_height="41dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/background_btn"
        android:text="Log Out"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_signout" />


</LinearLayout>